--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
+<html lang="uk">
 
-    <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
-    </main>
+<head>
+  <meta charset="UTF-8" />
+  <title>Пошук зображень</title>
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/izitoast/dist/css/iziToast.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simplelightbox/dist/simple-lightbox.min.css" />
+</head>
 
-    <load src="./partials/footer.html" />
+<body>
+  <header>
+    <form class="search-form" id="search-form">
+      <input type="text" name="searchQuery" placeholder="Search images..." required />
+      <button type="submit">Search</button>
+    </form>
+  </header>
+  <main>
+    <section class="gallery" id="gallery"></section>
+    <div class="loader hidden" id="loader"></div>
+    <button class="load-more hidden" id="load-more">Load more</button>
+  </main>
+  <script type="module" src="main.js"></script>
+</body>
 
-    <script type="module" src="./main.js"></script>
-  </body>
 </html>
