--- a/src/index.html
+++ b/src/index.html
@@ -2,26 +2,26 @@
 <html lang="uk">
 
 <head>
-  <meta charset="UTF-8" />
-  <title>Пошук зображень</title>
-  <link rel="stylesheet" href="styles.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/izitoast/dist/css/iziToast.min.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simplelightbox/dist/simple-lightbox.min.css" />
+    <meta charset="UTF-8" />
+    <title>Пошук зображень</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/izitoast/dist/css/iziToast.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simplelightbox/dist/simple-lightbox.min.css" />
 </head>
 
 <body>
-  <header>
-    <form class="search-form" id="search-form">
-      <input type="text" name="searchQuery" placeholder="Search images..." required />
-      <button type="submit">Search</button>
-    </form>
-  </header>
-  <main>
-    <section class="gallery" id="gallery"></section>
-    <div class="loader hidden" id="loader"></div>
-    <button class="load-more hidden" id="load-more">Load more</button>
-  </main>
-  <script type="module" src="main.js"></script>
+    <header>
+        <form class="form" id="search-form">
+            <input type="text" name="searchQuery" placeholder="Search images..." required />
+            <button type="submit">Search</button>
+        </form>
+    </header>
+    <main>
+        <ul class="gallery" id="gallery"></ul>
+        <span class="loader hidden" id="loader"></span>
+        <button class="load-more hidden" id="load-more">Load more</button>
+    </main>
+    <script type="module" src="./main.js"></script>
 </body>
 
 </html>
