--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
 <body>
     <header>
         <form class="form" id="search-form">
-            <input type="text" name="searchQuery" placeholder="Search images..." required />
-            <button type="submit">Search</button>
+            <input class="input-gallery" type="text" name="searchQuery" placeholder="Search images..." required />
+            <button class="button-gallery" type="submit">Search</button>
         </form>
     </header>
     <main>
