--- a/src/index.html
+++ b/src/index.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8" />
-    <title>Пошук зображень</title>
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/izitoast/dist/css/iziToast.min.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simplelightbox/dist/simple-lightbox.min.css" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vanilla App Template</title>
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
-    <header>
-        <form class="form" id="search-form">
-            <input class="input-gallery" type="text" name="searchQuery" placeholder="Search images..." required />
-            <button class="button-gallery" type="submit">Search</button>
-        </form>
-    </header>
-    <main>
-        <ul class="gallery" id="gallery"></ul>
-        <span class="loader hidden" id="loader"></span>
-        <button class="load-more hidden" id="load-more">Load more</button>
-    </main>
+    <form class="form">
+        <label>
+            <input class="form-input" type="text" name="search-text" placeholder="Search images..." required />
+        </label>
+        <button class="form-btn" type="submit">Search</button>
+    </form>
+
+    <ul class="gallery"></ul>
+
+    <button class="load-more" type="button">Load more</button>
+
+    <span class="loader"></span>
+
     <script type="module" src="./main.js"></script>
 </body>
 
